# stm-shop-floor-management

./: .env.example  .gitignore  LICENSE  README.md  STM.excalidraw  data.txt  pyproject.toml  requirements.txt  setup.cfg
app/: Data.drawio  __main__.py  a.json  app.py  main.py
app/assets/: df_caixas.csv  df_eff_last_month.csv  df_history.csv  df_perf_last_month.csv  df_repair_last_month.csv  feriados.csv  style.css  top_stops.csv
app/components/: bar_chart_details.py  bar_chart_general.py  bar_chart_lost.py  btn_modal.py  chart_history.py  date_picker_dmc.py  gauge.py  grid_aggrid.py  grid_eff.py  grid_occ.py  heatmap.py  history_components.py  icicle_chart.py  line_graph.py  modal_efficiency copy.py  modal_efficiency.py  modal_estoque.py  modal_history.py  modal_performance.py  modal_repair copy.py  modal_repair.py  production_cards.py  production_grid.py  segmented_btn.py
app/database/: connection.py  connection_local.py  db.drawio  db_insert.py  db_read.py  get_data.py  insert_data.py  last_month_ind.py
app/graphics/: indicators.py  indicators_turn.py  last_month_ind.py
app/helpers/: cache.py  my_types.py  path_config.py  types.py
app/jupyter/: Query Estoque.sql  Query Massadas.sql  Query Pasta.sql  SFM&IHM.ipynb  SFM.ipynb  STM.ipynb  for_testing_notebook.ipynb  test.ipynb
app/pages/: grafana.py  hour_prod.py  main_page copy.py  main_page.py  management.py  management_old.py  pcp.py
app/pcp/: analysis_pcp_data.py  cache_pcp.py  clean_pcp_data.py  components_pcp.py  get_pcp_data.py  grid_pcp.py  types_pcp.py
app/service/: big_data.py  clean_data.py  (+8 more)
(+20 files in other folders)
